api/src/templates/compute/base-router-service.yml
apiVersion: v1
kind: Service
metadata:
  name: compute-router
  namespace: $namespace
  labels:
    managed-by: control-plane
    compute-role: base
spec:
  selector:
    app: compute-router
  ports:
    - port: 5678
      targetPort: 5678
