api/src/templates/compute/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $ingress_name
  namespace: $namespace
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$$2
  labels:
    managed-by: control-plane
    compute-role: base
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: compute-router
      port:
        number: 5678
  rules:
    - host: $ingress_host
      http:
        paths:
$paths
